--- a/playlist-app/templates/add_song_to_playlist.html
+++ b/playlist-app/templates/add_song_to_playlist.html
@@ -4,6 +4,12 @@
 
 <h1>Add a song to {{ playlist.name }}</h1>
 
-<h1>Add a form that when submitted adds a song to this playlist!</h1>
+<form action="/playlists/{{ playlist.playlist_id }}/add-song" method="post">
+    {{form.csrf_token}}
+    {%for field in form if field.widget.input_type!='hidden'%}
+    <p>{{field.label}} {{field}}</p>
+    {%endfor%}
+    <button class="btn btn-success" type="submit">Add</button>
+    </form>
 
 {% endblock %}
