--- a/playlist-app/templates/new_song.html
+++ b/playlist-app/templates/new_song.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-<h1>Add a form that when submitted creates a new song!</h1>
-
+<h1>Create a new Song!</h1>
+<form action="/songs/add" method="post">
+{{form.csrf_token}}
+{%for field in form if field.widget.input_type!='hidden'%}
+<p>{{field.label}} {{field}}</p>
+{%endfor%}
+<button class="btn btn-success" type="submit">Create</button>
+</form>
 {% endblock %}
